--- a/resources/Header.less
+++ b/resources/Header.less
@@ -5,10 +5,13 @@
     background-color: @background-color-article;
     width: 100%;
     padding: 0 20px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     box-sizing: border-box;
     display: flex;
     align-items: center;
+    min-height: 3.125em;
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.1);
+
 
     /* REORDERING FOR DESKTOP (Logo | Sitename | Sidebar | Search | Tools) */
     /* 1. Logo (Natural Order: 0) */
@@ -16,7 +19,7 @@
     /* 3. Sidebar Menus (Force before search) */
     .nightingale-text-menus {
         order: 1; 
-        display: flex; /* Always visible now */
+        display: flex; 
         gap: 15px;
         margin-left: 15px;
         margin-right: 15px;
