--- a/resources/Search.less
+++ b/resources/Search.less
@@ -16,11 +16,9 @@
 		-webkit-appearance: none;
 		margin-top: 0;
 		font-size: 1rem;
-		height: calc(1.5em + 0.75rem + 2px);
+		height: calc(1.5em + 0.65rem);
 		border: solid 1px @color-gray-2;
 		padding: 0.375rem 0.75rem;
-		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-		outline: 0;
 	}
 
 	#searchButton,
