--- a/resources/Header.less
+++ b/resources/Header.less
@@ -134,23 +134,18 @@
 }
 
 /* --- DROPDOWN STYLING (GLOBAL - DESKTOP & MOBILE) --- */
-/* Moved out of media query so menus work on Desktop */
-
 /* RESET BUTTON STYLES FOR TEXT MENUS */
 .nightingale-mobile-dropdown .mw-checkbox-hack-button {
     width: auto;
-    height: auto;
     padding: 0;
-    margin: 0;
     background: transparent;
-    border: none;
-    color: @color-base;
-    font-size: 1rem;
-    font-weight: normal;
+    color: #355b83;
+    font-size: 16px;
     text-indent: 0;
     -webkit-mask-image: none;
     mask-image: none;
     cursor: pointer;
+    padding-right: 0.5rem;
 
     &:hover {
         color: @color-link;
