--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -10,7 +10,7 @@
             {{#nightingale-sidebar-menus}}
             <div class="mw-portlet nightingale-mobile-dropdown" id="{{html-id}}">
                 <input type="checkbox" id="cb-{{html-id}}" class="mw-checkbox-hack-checkbox">
-                <label for="cb-{{html-id}}" class="mw-checkbox-hack-button">{{label}} ▾</label>
+                <label for="cb-{{html-id}}" class="mw-checkbox-hack-button dropdown-toggle">{{label}}</label>
                 <div class="mw-portlet-body">
                     <ul>{{#array-items}}{{>ListItem}}{{/array-items}}</ul>
                 </div>
@@ -19,7 +19,7 @@
 
             <div class="mw-portlet nightingale-mobile-dropdown nightingale-mobile-only">
                 <input type="checkbox" id="cb-mob-tools" class="mw-checkbox-hack-checkbox">
-                <label for="cb-mob-tools" class="mw-checkbox-hack-button">{{nightingale-mobile-tools-label}} ▾</label>
+                <label for="cb-mob-tools" class="mw-checkbox-hack-button dropdown-toggle">{{nightingale-mobile-tools-label}}</label>
                 <div class="mw-portlet-body">
                     <ul>{{#nightingale-mobile-tools}}{{>ListItem}}{{/nightingale-mobile-tools}}</ul>
                 </div>
@@ -28,7 +28,7 @@
             {{#nightingale-has-mobile-links}}
             <div class="mw-portlet nightingale-mobile-dropdown nightingale-mobile-only">
                 <input type="checkbox" id="cb-mob-links" class="mw-checkbox-hack-checkbox">
-                <label for="cb-mob-links" class="mw-checkbox-hack-button">{{nightingale-mobile-links-label}} ▾</label>
+                <label for="cb-mob-links" class="mw-checkbox-hack-button dropdown-toggle">{{nightingale-mobile-links-label}}</label>
                 <div class="mw-portlet-body">
                     <ul>{{#nightingale-mobile-links}}{{>ListItem}}{{/nightingale-mobile-links}}</ul>
                 </div>
