--- a/resources/Header.less
+++ b/resources/Header.less
@@ -12,7 +12,6 @@
     min-height: 3.125em;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.1);
 
-
     /* REORDERING FOR DESKTOP (Logo | Sitename | Sidebar | Search | Tools) */
     /* 1. Logo (Natural Order: 0) */
     /* 2. Sitename (Natural Order: 0, effectively 1) */
@@ -40,7 +39,6 @@
     .nightingale-header-tools {
         display: contents;
     }
-
 
     /* MOBILE HEADER LAYOUT */
     @media ( max-width: @max-width-breakpoint-tablet ) {
@@ -80,6 +78,17 @@
             order: unset;
         }
     }
+}
+
+.dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
 }
 
 /* RIGHT GROUP Mobile and Desktop: Icons (Edit, Talk, Hybrid, Notif, Personal */
