--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.skin.defaults.less';
 @background-color-warning: #fdfcfb;
-@background-color-base: #eaecf0;
+@background-color-base: #f7f7f7;
 @background-color-article: #fbfdfd;
 @background-color-thumb: #fdfcfb;
 @color-thumb: #170b06;
