--- a/resources/Header.less
+++ b/resources/Header.less
@@ -146,10 +146,11 @@
 /* RESET BUTTON STYLES FOR TEXT MENUS */
 .nightingale-mobile-dropdown .mw-checkbox-hack-button {
     width: auto;
+    height: auto;
     padding: 0;
     background: transparent;
     color: #355b83;
-    font-size: 16px;
+    font-size: 17px;
     text-indent: 0;
     -webkit-mask-image: none;
     mask-image: none;
