--- a/resources/common.less
+++ b/resources/common.less
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+    background: @background-color-base;
     max-width: 100%;
     margin: 0 auto;
     font-family: @font-family;
