--- a/resources/Header.less
+++ b/resources/Header.less
@@ -2,7 +2,7 @@
 
 /* DESKTOP HEADER LAYOUT */
 .mw-header {
-    background-color: @background-color-article;
+    background-color: #ffffff;
     width: 100%;
     padding: 0 20px;
     margin-bottom: 15px;
@@ -150,7 +150,7 @@
     padding: 0;
     background: transparent;
     color: #355b83;
-    font-size: 17px;
+    font-size: 16px;
     text-indent: 0;
     -webkit-mask-image: none;
     mask-image: none;
