--- a/resources/common.less
+++ b/resources/common.less
@@ -38,15 +38,14 @@ main {
         flex-direction: column;
     }
 
-    /* CHANGE: Fixed width container, centered, no sidebar grid */
     #nightingale-page-container {
         width: 100%;
-        max-width: 1100px; /* Adjust this value for wider/narrower fixed width */
-        margin: 0 auto;    /* Centers the container */
+        max-width: 79%;
+        margin: 0 auto;
         flex-grow: 1;
         display: flex;
         flex-direction: column;
-        padding: 0 1em;    /* Small gutter on small screens */
+        padding: 0 1em;
         box-sizing: border-box;
 
         /* MOBILE OVERRIDE */
