--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -10,7 +10,7 @@
 @color-link: #0645ad;
 @color-link--active: #0645ad;
 @color-link--visited: #663366;
-@font-family: 'Segoe UI', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lato', 'Liberation Sans', 'Noto Sans', 'Helvetica Neue', 'Helvetica', sans-serif;
+@font-family: "Times New Roman", Times, serif;
 @icon-filter: none;
 @color-link-new: #9b1b2f;
 @color-link-stub: @color-link;
