--- a/resources/Content.less
+++ b/resources/Content.less
@@ -68,6 +68,10 @@
     border-radius: 10px;
 }
 
+.firstHeading {
+    display: none;
+}
+
 .mw-editsection {
     font-size: 0.85em;
     margin-left: 8px;
@@ -82,9 +86,6 @@
 }
 
 .page-Main_Page #catlinks {
-    display: none;
-}
-.main_page #catlinks {
     display: none;
 }
 
