--- a/resources/Header.less
+++ b/resources/Header.less
@@ -143,7 +143,6 @@
 }
 
 /* --- DROPDOWN STYLING (GLOBAL - DESKTOP & MOBILE) --- */
-/* RESET BUTTON STYLES FOR TEXT MENUS */
 .nightingale-mobile-dropdown .mw-checkbox-hack-button {
     width: auto;
     height: auto;
@@ -204,9 +203,8 @@
         a {
             display: block;
             padding: 6px 15px;
-            color: #0645ad;
+            color: #000000;
             text-decoration: none;
-            font-size: 0.95em;
 
             &:hover {
                 background-color: #eaecf0;
