--- a/resources/Header.less
+++ b/resources/Header.less
@@ -52,7 +52,9 @@
 
         /* 2. Sitename adjustments */
         #p-sitename {
+            display: block;
             margin-right: 10px;
+            font-size: x-large;
         }
 
         /* 3. Search bar takes remaining space on Top Row */
@@ -214,7 +216,7 @@
     }
 }
 
-/* UTILITY: Hide elements on desktop, show on mobile */
+/* UTILITY: Hide elements on desktop, show on mobile // this used for anything?
 .nightingale-mobile-only {
     display: none !important;
 
@@ -222,3 +224,4 @@
         display: block !important;
     }
 }
+*/
