--- a/templates/Content.mustache
+++ b/templates/Content.mustache
@@ -1,3 +1,8 @@
+<div id="sticky-page-tracker">
+    <div id="sticky-left" class="opage"></div>
+    <div id="sticky-right" class="otright"></div>
+</div>
+
 <main id="content" class="mw-body">
     <header class="content__header">
         {{>ContentIndicators}}
