--- a/resources/common.less
+++ b/resources/common.less
@@ -40,12 +40,11 @@ main {
 
     #nightingale-page-container {
         width: 100%;
-        max-width: 79%;
-        margin: 0 auto;
+        max-width: 84%;
         flex-grow: 1;
         display: flex;
         flex-direction: column;
-        padding: 0 1em;
+        padding: 0rem 0rem 0rem 10rem;
         box-sizing: border-box;
 
         /* MOBILE OVERRIDE */
