--- a/resources/Content.less
+++ b/resources/Content.less
@@ -115,9 +115,10 @@
     top: 0;
     left: 0; 
     right: 0;
-    max-width: 79%; 
-    margin: 0 auto;
-    padding: 1.5em 3em; 
+    width: 100%;
+    max-width: 84%; 
+    padding: 0 0 0 10rem;
+    padding-top: 1.5em;
     box-sizing: border-box; 
     z-index: 99;
     pointer-events: none;
@@ -145,9 +146,9 @@
     z-index: 101;
     pointer-events: none;
     display: none;
-    background: rgba(0, 128, 0, 0.2); 
+    background: rgba(0, 128, 0, 0.2);
     border: 2px solid green;
-    transition: top 0.1s linear, left 0.1s steps(1);
+    transition: top 0.1s linear, left 0.1s steps(1); 
 }
 
 .catlinks select {
