--- a/resources/Content.less
+++ b/resources/Content.less
@@ -117,8 +117,7 @@
     right: 0;
     width: 100%;
     max-width: 84%; 
-    padding: 0 0 0 10rem;
-    padding-top: 1.5em;
+    padding: 0 1.25em 0 calc(10rem + 1.25em);
     box-sizing: border-box; 
     z-index: 99;
     pointer-events: none;
