--- a/resources/common.less
+++ b/resources/common.less
@@ -35,6 +35,7 @@ main {
         min-height: 100vh;
         display: flex;
         flex-direction: column;
+        font-size: 17px;
     }
 
     #nightingale-page-container {
@@ -70,6 +71,10 @@ main {
         &.new:visited {
             color: @color-link-new;
         }
+    }
+
+    p {
+        margin: 0 0 1rem;
     }
 
     main {
