--- a/resources/Content.less
+++ b/resources/Content.less
@@ -145,8 +145,8 @@
     z-index: 101;
     pointer-events: none;
     display: none;
-    background: rgba(0, 128, 0, 0.2);
-    border: 2px solid green;
+    background: rgba(0, 128, 0, 0.05);
+    border: 2px solid rgba(0, 128, 0, 0.2);
     transition: top 0.1s linear, left 0.1s steps(1); 
 }
 
