--- a/resources/Header.less
+++ b/resources/Header.less
@@ -214,7 +214,7 @@
     }
 }
 
-/* UTILITY: Hide elements on desktop, show on mobile // this used for anything?
+/* UTILITY: Hide tools and links on desktop, show on mobile */
 .nightingale-mobile-only {
     display: none !important;
 
@@ -222,4 +222,3 @@
         display: block !important;
     }
 }
-*/
