--- a/resources/Content.less
+++ b/resources/Content.less
@@ -193,3 +193,20 @@
         display: none !important;
     }
 }
+@media (max-width: 400px) {
+    .mw-header {
+        padding: 5px !important;
+    }
+    .mw-header .nightingale-header-tools {
+        margin-top: 5px; /* Was 10px */
+    }
+    .nightingale-edit-button,
+    .nightingale-talk-button,
+    .mw-checkbox-hack-button {
+        margin: 0 1px !important; 
+    }
+    .nightingale-mobile-dropdown .mw-checkbox-hack-button {
+        padding-right: 2px !important;
+        font-size: 0.95em;
+    }
+}
