--- a/resources/Content.less
+++ b/resources/Content.less
@@ -209,4 +209,12 @@
         padding-right: 2px !important;
         font-size: 0.95em;
     }
+    .mw-portlet-personal {
+        padding: 0px 0px 0px 0px;
+    }
+}
+@media (max-width: 400px) {
+    .p-notifications {
+        display: none;
+    }
 }
