--- a/resources/Footer.less
+++ b/resources/Footer.less
@@ -14,6 +14,10 @@
     }
 }
 
+.footer-icons {
+    float: right;
+}
+
 .nightingale-footer-tools {
     display: flex;
     justify-content: center;
