--- a/resources/Content.less
+++ b/resources/Content.less
@@ -62,7 +62,7 @@
     border: solid #eaecf0;
     border-width: 1px 1px 0.2em;
     background: #ffffff;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     word-wrap: break-word;
     border-radius: 10px;
 }
