--- a/resources/Header.less
+++ b/resources/Header.less
@@ -161,6 +161,9 @@
         background: transparent;
     }
 }
+.pt-anonuserpage {
+    display: none;
+}
 
 /* DROPDOWN MECHANISM */
 .nightingale-mobile-dropdown {
