--- a/resources/Content.less
+++ b/resources/Content.less
@@ -149,7 +149,10 @@
     border: 2px solid rgba(0, 128, 0, 0.2);
     transition: top 0.1s linear, left 0.1s steps(1); 
 }
-
+/* Hide "Help" link on certain pages */
+.mw-indicator-mw-helplink {
+    display: none;
+}
 .catlinks select {
     font-size: 1rem;
     padding: 4px;
