--- a/resources/Content.less
+++ b/resources/Content.less
@@ -150,7 +150,7 @@
     transition: top 0.1s linear, left 0.1s steps(1); 
 }
 /* Hide "Help" link on certain pages */
-.mw-indicator-mw-helplink {
+#mw-indicator-mw-helplink {
     display: none;
 }
 .catlinks select {
