--- a/resources/Content.less
+++ b/resources/Content.less
@@ -76,10 +76,11 @@
     margin-left: 8px;
 }
 
+/* Controls how far below the header the "your edit has been saved" message appears
 .mw-notification-area-overlay {
     margin-top: 2em;
 }
-
+*/
 .postedit {
     margin-top: 3em;
 }
