--- a/templates/ContentHybrid.mustache
+++ b/templates/ContentHybrid.mustache
@@ -2,22 +2,45 @@
     <input type="checkbox" id="cb-hybrid" class="mw-checkbox-hack-checkbox">
     <label for="cb-hybrid" class="mw-checkbox-hack-button" aria-label="More Options">More ▾</label>
     <div class="mw-portlet-body">
-        <ul>
-            {{#nightingale-content-hybrid}}
-                <li id="{{id}}" class="{{class}}">
-                    {{^array-links}}
-                         <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
-                            {{text}}
-                         </a>
-                    {{/array-links}}
+        
+        <div class="nightingale-mega-menu">
+            
+            <ul class="nightingale-menu-section nightingale-section-primary">
+                {{#nightingale-content-hybrid}}
+                    <li id="{{id}}" class="{{class}}">
+                        {{^array-links}}
+                             <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
+                                {{text}}
+                             </a>
+                        {{/array-links}}
 
-                    {{#array-links}}
-                         <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
-                            {{text}}
-                         </a>
-                    {{/array-links}}
-                </li>
-            {{/nightingale-content-hybrid}}
-        </ul>
+                        {{#array-links}}
+                             <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
+                                {{text}}
+                             </a>
+                        {{/array-links}}
+                    </li>
+                {{/nightingale-content-hybrid}}
+            </ul>
+
+            <ul class="nightingale-menu-section nightingale-section-tools">
+                {{#nightingale-mobile-tools}}
+                    <li id="{{id}}" class="{{class}}">
+                        {{^array-links}}
+                             <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
+                                {{text}}
+                             </a>
+                        {{/array-links}}
+
+                        {{#array-links}}
+                             <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
+                                {{text}}
+                             </a>
+                        {{/array-links}}
+                    </li>
+                {{/nightingale-mobile-tools}}
+            </ul>
+            
+        </div>
     </div>
 </div>
