--- a/resources/Search.less
+++ b/resources/Search.less
@@ -1,28 +1,30 @@
 @import 'mediawiki.skin.variables.less';
 
 #p-search {
-	position: relative;
-	flex-grow: 1;
-	margin: 0 10px;
+    position: relative;
+    flex-grow: 1;
+    margin: 0 10px;
 }
 
 #searchform {
-	width: 100%;
-	margin: 0;
+    width: 100%;
+    margin: 0;
 
-	#searchInput {
-		width: 100%;
-		max-width: none;
-		-webkit-appearance: none;
-		margin-top: 0;
-		font-size: 1rem;
-		height: calc(1.5em + 0.65rem);
-		border: solid 1px @color-gray-2;
-		padding: 0.375rem 0.75rem;
-	}
+    #searchInput {
+        width: 100%;
+        max-width: none;
+        -webkit-appearance: none;
+        margin-top: 0;
+        font-size: 1rem;
+        height: calc(1.5em + 0.65rem);
+        border: solid 1px @border-color-input;
+        background-color: @background-color-input;
+        color: @color-input-text;
+        padding: 0.375rem 0.75rem;
+    }
 
-	#searchButton,
-	h3 {
-		display: none;
-	}
+    #searchButton,
+    h3 {
+        display: none;
+    }
 }
